WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293623
The WKSeparatedImageView class should not be public
https://bugs.webkit.org/show_bug.cgi?id=293623
Summary
The WKSeparatedImageView class should not be public
Etienne
Reported
2025-05-27 10:41:32 PDT
The WKSeparatedImageView class should be internal.
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2025-05-27 10:53:26 PDT
<
rdar://problem/152064738
>
Etienne
Comment 2
2025-05-27 10:53:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45950
EWS
Comment 3
2025-05-27 16:00:11 PDT
Committed
295476@main
(1244a0eb0ca7): <
https://commits.webkit.org/295476@main
> Reviewed commits have been landed. Closing PR #45950 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug