The WKSeparatedImageView class should not be public https://bugs.webkit.org/show_bug.cgi?id=293623 <rdar://152064738>

Reviewed by Aditya Keerthi and Richard Robinson.

Move the `WKObservingLayer` bit to the objc side so we can properly
transition the Swift bits to using `@objc @implementation` without
making anything public.

* Source/WebKit/Modules/Internal/WebKitInternal.h:
Add WKSeparatedImageView to WebKit internal.
* Source/WebKit/UIProcess/Cocoa/WKSeparatedImageView.h:
* Source/WebKit/UIProcess/Cocoa/WKSeparatedImageView.mm:
(+[WKSeparatedImageView layerClass]):
(-[WKObservingLayer setContents:]):
(-[WKSeparatedImageView layerSeparatedDidChange:]):
(-[WKSeparatedImageView layerWasCleared:]):
Move the WKObservingLayer class and conformance from WKA to here.

Canonical link: https://commits.webkit.org/295476@main