Source/WebKit/Modules/Internal/WebKitInternal.h
@@ -32,6 +32,7 @@
 #import "WKPDFPageNumberIndicator.h"
 #import "WKPreferencesInternal.h"
 #import "WKScrollGeometry.h"
+#import "WKSeparatedImageView.h"
 #import "WKTextExtractionItem.h"
 #import "WKUIDelegateInternal.h"
 #import "WKWebViewConfigurationInternal.h"
